Finished Marker Info Text

--- a/www/index.html
+++ b/www/index.html
@@ -86,6 +86,7 @@
 
 <!--                                 <span class="open left"><a href="#panel-01">does this work</a></span> -->
                 <h1><span class="title">Fire Incident Viewer</span></h1>
+                <a href="about.html" data-icon="info" data-transition="none" data-direction="reverse">About</a> 
             </div>
 
 
