Final Commit of GSO Flame

--- a/about.html
+++ b/about.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html> 
 <html lang="en">
   <head>
-    <title>Recycling Guide</title>
+    <title>About this App</title>
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>   
   </head>
   <body> 
-      <div data-role="page" id="aboutPage" data-theme="b" align="center">
+    <div data-role="page" id="aboutPage" align="center" data-theme="b">
       <div data-role="header" data-position="fixed" data-tap-toggle="false">
         <a href="index.html" data-icon="carat-l" data-transition="none" data-direction="reverse">Back</a>
-          <h1>About this App</h1>
-           
+          <h1>About this App</h1>         
       </div>
-      <div data-role="content" id="aboutContent" data-theme="b" >
+      <div data-role="content" id="aboutContent">
+
+          <p>Pinch outward to zoom-in</p>
 
       </div>
   </div>
